...
            <point key="canvasLocation" x="1228" y="-629"/>
        </scene>
        <!--Program Container-->
        <scene sceneID="wxc-t8-SnZ">
            <objects>
                <navigationController title="Program Container" navigationBarHidden="YES" id="wZR-mg-qH9" customClass="NavigationController" customModule="natruc" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Program" image="program" id="VAD-RA-gXR"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6tq-Ty-1RK">
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="4fb-do-8uB" kind="relationship" relationship="rootViewController" id="vY8-1O-ud6"/>
                    </connections>
...
            </objects>
            <point key="canvasLocation" x="328" y="889"/>
        </scene>
        <!--Info-->
        <scene sceneID="AzX-Lb-vA4">
            <objects>
                <viewController title="Info" id="z1B-2X-eIh" customClass="InfoViewController" customModule="natruc" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="4Ey-fU-64p"/>
                        <viewControllerLayoutGuide type="bottom" id="wNn-LS-Qxs"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="PMt-Us-CyJ">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
